@@ -5,6 +5,7 @@ Best: 32
 24-03-202
 Streak: 2
     - Pull initKoin out of androidMain and into shared App code.
+    - Add task to restructure 'repository' usage.
 
 23-03-2025
 Streak: 1
